# Online-Cinema

./: .dockerignore  .env.example  .flake8  .gitignore  .tasks  Dockerfile  README.md  docker-compose.yml  poetry.toml  pyproject.toml  pyrightconfig.json  requirements-dev.txt  requirements.txt
.github/workflows/: cd-ec2.yml  ci.yml
cinema/: main.py
scripts/: poetry.sh
src/: main.py  openapi_docs.py
src/auth/: dependencies.py  routes.py  security.py
src/config/: settings.py
src/database/: __init__.py  commerce_helpers.py  models.py  notify_moderators.py  populate.py  reactions.py  seed.py  seed_payment_demo.py  session.py
src/email/: __init__.py  smtp_send.py
src/routes/: __init__.py  admin.py  cart.py  certifications.py  comment_likes.py  comments.py  directors.py  favorites.py  genres.py  movie_likes.py  movies.py  notifications.py  orders.py  payments.py  profile.py  ratings.py  stars.py  stripe_webhook.py
src/schemas/: __init__.py  admin.py  admin_commerce.py  auth.py  cart.py  certifications.py  comments.py  directors.py  favorites.py  genres.py  movie_likes.py  movies.py  orders.py  payments.py  profile.py  ratings.py  reactions.py  stars.py
src/tests/: conftest.py  test_app.py  test_async_db.py  test_auth_lifecycle.py  test_db.py  test_moderator_carts_and_delete.py  test_movies_catalog.py  test_must_have_auth_guards.py  test_openapi_docs_auth.py  test_order_refund.py  test_password_complexity.py  test_payments.py  test_worker_purge_tokens.py
src/worker/: celery_app.py  mail_tasks.py  tasks.py
